tests/baselines/reference/parseIncompleteBinaryExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/Expressions/parseIncompleteBinaryExpression1.ts(1,9): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/Expressions/parseIncompleteBinaryExpression1.ts(1,12): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/parser/ecmascript5/Expressions/parseIncompleteBinaryExpression1.ts (2 errors) ====
    var v = || b;
            ~~
!!! error TS1109: Expression expected.
               ~
!!! error TS2304: Cannot find name 'b'.